--- a/public/index.html
+++ b/public/index.html
@@ -7,42 +7,79 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <!-- angular js script-->
   <script type="text/javascript" src="https://code.angularjs.org/1.3.14/angular.min.js"></script>
+  <!-- Angular Material style sheet -->
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+  <!-- ngStorage cdn -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 </head>
 
-<body ng-controller="MainController">
+<body ng-controller="MainController" ng-cloak>
   <div class="main">
-    <div class="header">INVERTED INDEX</div>
+    <md-toolbar class="md-primary md-raised md-hue-1">
+      <div class="md-toolbar-tools">
+        <h2 class="md-column">INVERTED INDEX</h2>
+      </div>
+    </md-toolbar>
     <div class="input">
       <p ng-model="file"></p>
       <input type="file" file-model="myFile">
       <br>
       <br>
-      <button class="btn btn-primary" type="button" ng-click="uploadFile()">Create Index
-      </button>
-      <br>
-      <br>
-      <button ng-click="getIndex()">Get Index</button>
-      <br>
-      <br>
+      <md-button class="md-primary" type="button" ng-click="uploadFile()">Create Index
+      </md-button>
       <form id="search" ng-submit="searchIndex()">
         <input type="text" placeholder="search" ng-model="formData.search" ng-list>
-        <button type="submit" ng-submit="searchIndex()">Search Index</button>
-        {{ results }}
+        <md-button class="md-primary" type="submit" ng-submit="searchIndex()">Search Index</md-button>
+        {{ searchedWords }}
       </form>
-      <button ng-click="showFiles()">showFiles</button>
     </div>
-    <div class="output">
-      <label ng-repeat="file in files">
-        <input type="checkbox" value="file" ng-checked="checked.indexOf(file) > -1" ng-click="toogleSelection(file)"> {{ file }}
-      </label>
-      <table>
-        <tr ng-repeat="(name, index) in words">
-          <td>{{ name }}</td>
-          <td>{{ index }}</td>
+    <md-divider></md-divider>
+    <md-toolbar class="md-default">
+      <div class="md-toolbar-tools">
+        <span>Uploaded Files</span>
+      </div>
+    </md-toolbar>
+    <!-- uploaded files table -->
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>File name</th>
+          <th></th>
         </tr>
-      </table>
-      <span id="xmlresults" display="hidden"></span>
-    </div>
+      </thead>
+      <tbody>
+        <tr ng-repeat="file in files">
+          <td>
+            <input type="checkbox" value="file" ng-checked="checked.indexOf(file) > -1" ng-click="toogleSelection(file)">
+          </td>
+          <td>{{ file }}</td>
+          <td>
+            <md-button class="md-primary" ng-click="fetchIndex(file)">Get Index</md-button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button ng-click="showFiles()">showFiles</button>
+    <table>
+      <thead>
+        <tr>
+          <th ng-model="file"></th>
+          <th>Document 1</th>
+          <th>Document 2</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="(name, index) in fileIndex">
+          <td>{{ name }}</td>
+          <td ng-if='index.includes(0)'>X</td>
+          <td></td>
+          <td ng-if='index.includes(1)'>X</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   </div>
   <!-- Modules -->
   <script src="js/app.js"></script>
@@ -50,6 +87,13 @@
   <script src="js/controllers/MainController.js"></script>
   <!-- Directives -->
   <script src="js/directives/fileModel.js"></script>
+  <!-- Angular Material requires Angular.js Libraries -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 </body>
 
 </html>
