--- a/public/index.html
+++ b/public/index.html
@@ -22,65 +22,65 @@
     </md-toolbar>
     <div class="input">
       <md-divider></md-divider>
-      <input type="file" file-model="myFile">
-      <br>
-      <br>
-      <md-button class="md-primary" type="button" ng-click="uploadFile()">Create Index
-      </md-button>
-      <form id="search" ng-submit="searchIndex()">
-        <input type="text" placeholder="search" ng-model="formData.search" ng-list>
-        <md-button class="md-primary" type="submit" ng-submit="searchIndex()">Search Index</md-button>
-        <div ng-repeat="terms in searchedWords">
-          {{ terms }}
-        </div>
-      </form>
-      <md-divider></md-divider>
+      <input ng-model="imgFile" file-list name="imgFile" type="file" id="myFile">
     </div>
-    <md-divider></md-divider>
-    <md-toolbar class="md-default">
-      <div class="md-toolbar-tools">
-        <span>Uploaded Files</span>
+    <br>
+    <br>
+    <form id="search" ng-submit="searchIndex()">
+      <input type="text" placeholder="search" ng-model="formData.search" ng-list>
+      <md-button class="md-primary" type="submit" ng-submit="searchIndex()">Search Index</md-button>
+      <div ng-repeat="terms in searchedWords">
+        {{ terms }}
       </div>
-    </md-toolbar>
-    <!-- uploaded files table -->
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>File name</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="file in files">
-          <td>
-            <input type="checkbox" value="file" ng-checked="checked.indexOf(file) > -1" ng-click="toogleSelection(file)">
-          </td>
-          <td>{{ file }}</td>
-          <td>
-            <md-button class="md-primary" ng-click="fetchIndex(file)">Get Index</md-button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    </form>
     <md-divider></md-divider>
     <md-divider></md-divider>
-    <table id="getIndex" ng-show="show">
-      <thead>
-        <tr>
-          <th ng-model="file"></th>
-          <th>Document 1</th>
-          <th>Document 2</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="(name, index) in fileIndex" ng-switch="index">
-          <td>{{ name }}</td>
-          <td>{{ index.includes(0) ? 'X' : ' ' }}</td>
-          <td>{{ index.includes(1) ? 'X' : ' ' }}</td>
-        </tr>
-      </tbody>
-    </table>
+    <div ng-show="fileReady">
+      <md-toolbar class="md-default">
+        <div class="md-toolbar-tools">
+          <span>Uploaded Files</span>
+        </div>
+      </md-toolbar>
+      <!-- uploaded files table -->
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th>File name</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="file in files">
+            <td>
+              <input type="checkbox" value="file" ng-checked="checked.indexOf(file) > -1" ng-click="toogleSelection(file)">
+            </td>
+            <td>{{ file }}</td>
+            <td>
+              <md-button class="md-primary" ng-click="fetchIndex(file)">Get Index</md-button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <md-divider></md-divider>
+      <md-divider></md-divider>
+      <table id="getIndex" ng-show="show">
+        <thead>
+          <tr>
+            <th ng-model="file"></th>
+            <th>Document 1</th>
+            <th>Document 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="(name, index) in fileIndex" ng-switch="index">
+            <td>{{ name }}</td>
+            <td>{{ index.includes(0) ? 'X' : ' ' }}</td>
+            <td>{{ index.includes(1) ? 'X' : ' ' }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
   </div>
   <!-- Modules -->
