Fix testing bugs

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </md-toolbar>
     <div class="input">
       <md-divider></md-divider>
-      <input ng-model="imgFile" file-list name="imgFile" type="file" id="myFile">
+      <input file-list type="file">
     </div>
     <br>
     <br>
